Adding 2 html files

--- a/tetiana.html
+++ b/tetiana.html
@@ -12,11 +12,11 @@
   </head>
   <body>
     <header>
+      <a href="index.html">O projectu</a>
       <a href="alina.html">Alina Khoptar</a>
-      <a href="tetiana.html">Tetiana Misiuk</a>
     </header>
     <div class="container">
-      <h1>Hlídací Lama</h1>
+      <h1>Tetiana Misiuk</h1>
     </div>
   </body>
 </html>
