Adding images and information about project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,32 @@
     </header>
     <div class="container">
       <h1>Hlídací Lama</h1>
+      <img src="img/Lama_logo.jpg" alt="Lama_logo" />
+      <p>
+        Náš projekt se jmenuje "Hlídací Lama". Toto bude webová stránka, na
+        které si uživatel po registraci bude moci prohlížet a vybírat zveřejněny
+        aktuální nabídky nemovitostí na území České republiky. Hledání bude
+        jednoduché, protože na stránce bude formulář, který pomůže uživatelům
+        nastavit potřebné filtry pro přesnější výběr nemovitosti o kterou má
+        zájem. A hvězdou našeho projektu je Láma, jejímž účelem je pomáhat
+        uživatelům. Tak, uživatel může zanechat Lamě požadavek, pokud se objeví
+        objekt podle relevantních kritérií, ona tyto informace odešle uživateli
+        na e-mail.
+      </p>
+    </div>
+    <div>
+      <div>
+        <img src="img/home_page_1.jpg" alt="Home page header" />
+        <img src="img/home_page_2.jpg" alt="Home page body" />
+      </div>
+      <div>
+        <img src="img/registration.jpg" alt="Registration" />
+        <img src="img/filtr.jpg" alt="Filtr" />
+        <img src="img/filtr_house.jpg" alt="Filtr house" />
+      </div>
+      <div>
+        <h2>Více informací <a href="img/Hlídací lama.pdf">zde</a></h2>
+      </div>
     </div>
   </body>
 </html>
