--- a/index.html
+++ b/index.html
@@ -10,39 +10,43 @@
 
     <title>Hlídací Lama</title>
   </head>
-  <body>
-    <header>
-      <a href="alina.html">Alina Khoptar</a>
-      <a href="tetiana.html">Tetiana Misiuk</a>
+  <body class="body">
+    <header class="header">
+      <a href="">Tetiana Misiuk</a>
+      <a href="">Alina Khoptar</a>
     </header>
     <div class="container">
-      <h1>Hlídací Lama</h1>
-      <img src="img/Lama_logo.jpg" alt="Lama_logo" />
-      <p>
-        Náš projekt se jmenuje "Hlídací Lama". Toto bude webová stránka, na
-        které si uživatel po registraci bude moci prohlížet a vybírat zveřejněny
-        aktuální nabídky nemovitostí na území České republiky. Hledání bude
-        jednoduché, protože na stránce bude formulář, který pomůže uživatelům
-        nastavit potřebné filtry pro přesnější výběr nemovitosti o kterou má
-        zájem. A hvězdou našeho projektu je Láma, jejímž účelem je pomáhat
-        uživatelům. Tak, uživatel může zanechat Lamě požadavek, pokud se objeví
-        objekt podle relevantních kritérií, ona tyto informace odešle uživateli
-        na e-mail.
-      </p>
-    </div>
-    <div>
       <div>
-        <img src="img/home_page_1.jpg" alt="Home page header" />
-        <img src="img/home_page_2.jpg" alt="Home page body" />
+        <img src="img/Lama_logo.jpg" alt="" />
       </div>
       <div>
-        <img src="img/registration.jpg" alt="Registration" />
-        <img src="img/filtr.jpg" alt="Filtr" />
-        <img src="img/filtr_house.jpg" alt="Filtr house" />
-      </div>
-      <div>
-        <h2>Více informací <a href="img/Hlídací lama.pdf">zde</a></h2>
+        <h1>Hlídací Lama</h1>
+        <p>
+          Náš projekt se jmenuje "Hlídací Lama". Toto bude webová stránka, na
+          které si uživatel po registraci bude moci prohlížet a vybírat
+          zveřejněny aktuální nabídky nemovitostí na území České republiky.
+          Hledání bude jednoduché, protože na stránce bude formulář, který
+          pomůže uživatelům nastavit potřebné filtry pro přesnější výběr
+          nemovitosti o kterou má zájem. A hvězdou našeho projektu je Láma,
+          jejímž účelem je pomáhat uživatelům. Tak, uživatel může zanechat Lamě
+          požadavek, pokud se objeví objekt podle relevantních kritérií, ona
+          tyto informace odešle uživateli na e-mail.
+        </p>
       </div>
     </div>
+    <div class="foto">
+      <div class="home_page">
+        <img src="img/home_page_1.jpg" alt="" />
+        <img src="img/home_page_2.jpg" alt="" />
+      </div>
+      <div class="registr">
+        <img src="img/registration.jpg" alt="" />
+        <img src="img/filtr.jpg" alt="" />
+        <img src="img/filtr_house.jpg" alt="" />
+      </div>
+    </div>
+    <footer class="footer">
+      <p>Vice informaci o prototypu<a href="img/Hlídací lama.pdf">zde</a></p>
+    </footer>
   </body>
 </html>
