Styling pages about me and adding information, general style corrections

--- a/alina.html
+++ b/alina.html
@@ -10,13 +10,38 @@
 
     <title>Hlídací Lama</title>
   </head>
-  <body>
+  <body class="container">
     <header>
       <a href="index.html">O projectu</a>
       <a href="tetiana.html">Tetiana Misiuk</a>
     </header>
-    <div class="container">
-      <h1>Alina Khoptar</h1>
-    </div>
+    <section>
+      <div>
+        <img class="my_foto" src="" alt="" />
+      </div>
+      <div>
+        <h2>Ahoj, jsem Alina</h2>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, vero
+          autem. Doloremque, mollitia autem eos laboriosam sit odio illo quas ex
+          eaque quae, officia quaerat assumenda tempore aliquid! Minima, quasi.
+        </p>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tenetur
+          hic ex blanditiis provident, eveniet qui sit beatae quam voluptatem
+          voluptates doloremque consectetur neque id inventore. Ipsa, fuga
+          quibusdam. Saepe.
+        </p>
+
+        <div class="logo_git">
+          <img src="img/github.png" alt="" />
+          <a style="color: green" href="https://github.com/alinakhop"
+            >https://github.com/alinakhop</a
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
