--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <title>Hlídací Lama</title>
   </head>
-  <body class="body">
-    <header class="header">
-      <a href="">Tetiana Misiuk</a>
-      <a href="">Alina Khoptar</a>
+  <body class="container">
+    <header>
+      <a href="tetiana.html">Tetiana Misiuk</a>
+      <a href="alina.html">Alina Khoptar</a>
     </header>
-    <div class="container">
+    <div class="info_project">
       <div>
-        <img src="img/Lama_logo.jpg" alt="" />
+        <img src="img/Lama_logo.png" alt="Lama" />
       </div>
       <div>
         <h1>Hlídací Lama</h1>
@@ -34,18 +34,18 @@
         </p>
       </div>
     </div>
-    <div class="foto">
-      <div class="home_page">
+    <div class="foto_project">
+      <div class="foto_left">
         <img src="img/home_page_1.jpg" alt="" />
         <img src="img/home_page_2.jpg" alt="" />
       </div>
-      <div class="registr">
+      <div class="foto_right">
         <img src="img/registration.jpg" alt="" />
         <img src="img/filtr.jpg" alt="" />
         <img src="img/filtr_house.jpg" alt="" />
       </div>
     </div>
-    <footer class="footer">
+    <footer>
       <p>Vice informaci o prototypu<a href="img/Hlídací lama.pdf">zde</a></p>
     </footer>
   </body>
