Personal pages development

--- a/alina.html
+++ b/alina.html
@@ -17,23 +17,22 @@
     </header>
     <section>
       <div>
-        <img class="my_foto" src="" alt="" />
+        <img class="my_foto" src="img/KhoptarA.jpg" alt="" />
       </div>
       <div>
         <h2>Ahoj, jsem Alina</h2>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, vero
-          autem. Doloremque, mollitia autem eos laboriosam sit odio illo quas ex
-          eaque quae, officia quaerat assumenda tempore aliquid! Minima, quasi.
+          <b>Něco o mně: </b>Jsem z Ukrajiny, ale už rok bydlím v Praze. Nejsem
+          studentka už dlouho, ale učím se celý život. Mám moc ráda nové výzvy.
         </p>
-
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tenetur
-          hic ex blanditiis provident, eveniet qui sit beatae quam voluptatem
-          voluptates doloremque consectetur neque id inventore. Ipsa, fuga
-          quibusdam. Saepe.
+          <b>Pracuju: </b>V současné době pracuju jako vědecký pracovník na
+          Univerzitě Karlově, a předtím jsem pracovala lektorkou na Univerzitě v
+          Ukrajině. Pro to baví mě učit a učit se.
         </p>
+        <p><b>Ráda: </b>Když zbyde čas ráda cvičím jógu a cestuji.</p>
+        <p><b>Jsem: </b>Věčná “studentka” 😊</p>
 
         <div class="logo_git">
           <img src="img/github.png" alt="" />
