--- a/tetiana.html
+++ b/tetiana.html
@@ -23,17 +23,18 @@
         <h2>Ahoj, jsem Tetiana</h2>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, vero
-          autem. Doloremque, mollitia autem eos laboriosam sit odio illo quas ex
-          eaque quae, officia quaerat assumenda tempore aliquid! Minima, quasi.
+          <b>Něco o mně: </b> jsem Ukrajinka. Už vice něž rok bydlím v Praze.
         </p>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum tenetur
-          hic ex blanditiis provident, eveniet qui sit beatae quam voluptatem
-          voluptates doloremque consectetur neque id inventore. Ipsa, fuga
-          quibusdam. Saepe.
+          <b>Pracovala jsem: </b>v Ukrajině jako vedoucí dětského kroužku
+          “Digitální ilustrace” a taky manažerkou v realitce.
         </p>
+        <p>
+          <b>Ráda: </b>čtu detektivky, kreslím ilustrace a fotím. Zajímám se o
+          psychologii a astrologii.
+        </p>
+        <p><b>Jsem: </b>introvert, Kozoroh s citlivým srdcem.</p>
 
         <div class="logo_git">
           <img src="img/github.png" alt="" />
